# package_training

./: .coverage  .gitignore  README.md  pyproject.toml  setup.cfg
src/: calculator.py
src/package_training/: calculator.py
src/package_training.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_calculator.py
