[metadata]
name = package_training
description = Packaging setup and content for deployment
author = Rushabh Barbhaya
platforms = unix, linux, osx, cygwin, win32
version = 0.0.1
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages = 
    package_training
python_requires = >=3.10
# install_requires =
#     None
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest
    pytest-cov
    pylint
    mypy
    # flake8>=3.9
    # tox>=3.24

[options.package_data]
package_training = py.typed